# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: my-check.yml
asciinema/: generate_diff.cast
gendiff/parsers/: file_loader.py
gendiff/scripts/: gendiff.py  generate_diff.py
tests/: test_file_loader.py  test_gendiff.py  test_generate_diff.py
